Fix bug: Health bar display bugs (single image, two image not rendering correctly)